# PPT_generator

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BOOK-5k.md  Dockerfile  README.md  TECH-STACK-RATIONALE.md  demo.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/api/: openapi.yaml
docs/performance/: PERFORMANCE-SCALABILITY.md
docs/security/: SECURITY-IMPLEMENTATION.md
frontend/: index.html
infrastructure/bicep/: main.bicep
src/: __init__.py  main.py
src/agents/: architect_agent.py  base_agent.py  content_agent.py  export_agent.py  orchestrator.py  planner_agent.py  qa_compliance_agent.py  research_agent.py
src/api/: main.py
src/api/middleware/: audit.py  auth.py  rate_limiting.py  security.py
src/api/routes/: admin.py  assets.py  auth.py  generation.py  health.py  presentations.py
src/core/: config.py  config_new.py  constants.py  exceptions.py  logging.py
src/models/: schemas.py
src/services/: cache_service.py  database.py
src/utils/: monitoring.py
tests/: conftest.py
